# advent-of-code-rust

./: .gitignore  Cargo.toml  README.md  aoc.bat  justfile  puzzles.md  qa.bat  qa.ps1  results.md
.cargo/: config.toml
.github/workflows/: qa.yml
src/: aoc.rs  aoc2015.rs  aoc2016.rs  aoc2017.rs  aoc2018.rs  aoc2019.rs  aoc2020.rs  aoc2021.rs  aoc2022.rs  aoc2023.rs  aoc2024.rs  aoc2025.rs  aocYYYY.rs  aocYYYYdayDD.rs  lib.rs  main.rs
src/aoc/: ansi.rs  cli.rs  error.rs  runner.rs
src/aoc2015/: aoc2015day01.rs  aoc2015day02.rs  aoc2015day03.rs  aoc2015day04.rs  aoc2015day05.rs  aoc2015day06.rs  aoc2015day07.rs  aoc2015day08.rs  aoc2015day09.rs  aoc2015day10.rs  aoc2015day11.rs  aoc2015day12.rs  aoc2015day13.rs  aoc2015day14.rs  aoc2015day15.rs  aoc2015day16.rs  aoc2015day17.rs  aoc2015day18.rs  aoc2015day19.rs  aoc2015day20.rs  aoc2015day21.rs  aoc2015day22.rs  aoc2015day23.rs  aoc2015day24.rs  aoc2015day25.rs
src/aoc2016/: aoc2016day01.rs  aoc2016day02.rs  aoc2016day03.rs  aoc2016day04.rs  aoc2016day05.rs  aoc2016day06.rs  aoc2016day07.rs  aoc2016day08.rs  aoc2016day09.rs  aoc2016day19.rs
src/aoc2017/: aoc2017day01.rs  aoc2017day02.rs  aoc2017day03.rs  aoc2017day04.rs  aoc2017day05.rs  aoc2017day06.rs  aoc2017day07.rs  aoc2017day08.rs  aoc2017day09.rs  aoc2017day10.rs  aoc2017day11.rs  aoc2017day12.rs  aoc2017day13.rs  aoc2017day14.rs  aoc2017day15.rs  aoc2017day16.rs  aoc2017day17.rs  aoc2017day18.rs  aoc2017day19.rs  aoc2017day20.rs  aoc2017day21.rs  aoc2017day22.rs  aoc2017day23.rs  aoc2017day24.rs  aoc2017day25.rs
src/aoc2018/: aoc2018day01.rs
src/aoc2019/: aoc2019day01.rs
src/aoc2020/: aoc2020day01.rs
src/aoc2021/: aoc2021day01.rs
src/aoc2022/: aoc2022day01.rs
src/aoc2023/: aoc2023day01.rs  aoc2023day02.rs  aoc2023day03.rs  aoc2023day04.rs  aoc2023day05.rs  aoc2023day06.rs  aoc2023day07.rs  aoc2023day08.rs  aoc2023day09.rs  aoc2023day10.rs  aoc2023day11.rs  aoc2023day12.rs  aoc2023day13.rs  aoc2023day14.rs  aoc2023day15.rs  aoc2023day16.rs  aoc2023day17.rs  aoc2023day18.rs  aoc2023day19.rs  aoc2023day20.rs  aoc2023day21.rs  aoc2023day22.rs  aoc2023day23.rs  aoc2023day24.rs  aoc2023day25.rs
src/aoc2024/: aoc2024day00.rs  aoc2024day01.rs  aoc2024day02.rs  aoc2024day03.rs  aoc2024day04.rs  aoc2024day05.rs  aoc2024day06.rs  aoc2024day07.rs  aoc2024day08.rs  aoc2024day09.rs  aoc2024day10.rs  aoc2024day11.rs  aoc2024day12.rs  aoc2024day13.rs  aoc2024day14.rs  aoc2024day15.rs  aoc2024day16.rs  aoc2024day17.rs  aoc2024day18.rs  aoc2024day19.rs  aoc2024day20.rs  aoc2024day21.rs  aoc2024day22.rs  aoc2024day23.rs  aoc2024day24.rs  aoc2024day25.rs
src/aoc2025/: aoc2025day01.rs  aoc2025day02.rs  aoc2025day03.rs  aoc2025day04.rs  aoc2025day05.rs  aoc2025day06.rs  aoc2025day07.rs  aoc2025day08.rs  aoc2025day09.rs  aoc2025day10.rs  aoc2025day11.rs  aoc2025day12.rs
