# Cargo manifest file for Rust 🦀 solutions.
# @see https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "advent-of-code-rust"
version = "0.1.0"
authors = ["Balint Toth"]
edition = "2021"
rust-version = "1.81"
description = "Advent of Code puzzle solutions in Rust by TBali"
homepage = "https://adventofcode.com/"
repository = "https://github.com/tbali0524/advent-of-code-rust/"
license = "MIT"
keywords = ["aoc", "algorithms"]

[lib]
path = "src/lib.rs"
name = "aoc"

[[bin]]
path = "src/main.rs"
name = "aoc"

[dependencies]
indicatif = {version = "*", features = ["rayon"]} # used by run_puzzles()
md5 = "0.7"         # used by aoc2015day04.rs
rayon = "1.10"      # used by run_puzzles()
regex = "1.10"      # used by aoc2017day20.rs
serde_json = "1"    # used by aoc2015day12.rs
