# Cargo manifest file for Rust 🦀 solutions.
# @see https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Advent of Code puzzle solutions in Rust by TBali"
homepage = "https://adventofcode.com/"
repository = "https://github.com/tbali0524/advent-of-code-rust/"
license = "MIT"
keywords = ["aoc", "algorithms"]

[profile.profiling]
inherits = "release"
debug = true

[lib]
path = "src/lib.rs"
name = "aoc"

[[bin]]
path = "src/main.rs"
name = "aoc"

[dependencies]
indicatif = {version = "0.18", features = ["rayon"]} # used by run_puzzles()
md5 = "0.8"             # used by aoc2015day04, aoc2016day05
num-bigint = "0.4"      # used by aoc2023day24
priority-queue = "2.7"  # used by aoc2023day17, aoc2023day20, aoc2024day16
rayon = "1.11"          # used by run_puzzles()
regex = "1.12"          # used by aoc2017day20, aoc2023day19
serde_json = "1"        # used by aoc2015day12
